[package]
name = "xdump"
version = "0.1.0"
authors = ["Yaguo Zhou <yaguozhou@126.com>"]
edition = "2018"
description = "display file contents in hexadecimal, decimal, octal, binary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.9"
clap = "2.33"

[profile.dev]
opt-level = 0

[profile.release]
# https://github.com/johnthagen/min-sized-rust
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     #
